--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
         <a href="">Our Honey</a>
         <a href="">Trace Honey</a>
-         <div id='growLi'><imgid='growLi' src=".//assets/imgs/logo.png" alt="logo"><a href="">SHOP</a> </div>
+         <div id='growDiv'><imgid='growLi' src=".//assets/imgs/logo.png" alt="logo"><a href="">SHOP</a> </div>
         <a href=""> Facilities</a>
         <a href="">Conctacts</a>
 
@@ -29,13 +29,13 @@
         <h1>Best Selling <span>Products</span></h1>
         
             <div class="carddiv">
-                <img class="Card" src="./assets/imgs/honey.jpg" alt="">
+                <img class="imgCard" src="./assets/imgs/honey.jpg" alt="">
                 <h5>
                     100% Bio Honey
                 </h5>
                     <p>Italian, not treated</p>
                     <p>7$/Kg</p>
-                    <a class href="">Add to Card</a>
+                    <a class="addCard" href="">Add to Card</a>
             </div>
             <div>
                 <img src="./assets/imgs/honey.jpg" alt="">
@@ -45,7 +45,7 @@
                     </h5>
                         <p>Italian, not treated</p>
                         <p>7$/Kg</p>
-                        <a href="">Add to Card</a>
+                        <a class="ancorCard" href="">Add to Card</a>
                 </div>
             </div>
             <div>
