--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Hind+Siliguri:wght@300;400;500;600;700&family=Montserrat+Subrayada:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bitter:ital,wght@0,100..900;1,100..900&family=Hind+Siliguri:wght@300;400;500;600;700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat+Subrayada:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bitter:ital,wght@0,100..900;1,100..900&family=Hind+Siliguri:wght@300;400;500;600;700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat+Subrayada:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
 <nav>
     
-        <a href="">Our Honey</a>
-        <a href="">Trace Honey</a>
-         <div id='growDiv'><imgid='growLi' src=".//assets/imgs/logo.png" alt="logo"><a href="">SHOP</a> </div>
-        <a href=""> Facilities</a>
-        <a href="">Conctacts</a>
+        <a class="ancorHeader" href="">Our Honey</a>
+        <a class="ancorHeader" href="">Trace Honey</a>
+         <div id="growDiv"> <img src=".//assets/imgs/logo.png" alt="logo"> <a id="ancorShop" href="">SHOP</a></div>
+        <a  class="ancorHeader" href=""> Facilities</a>
+        <a class="ancorHeader" href="">Conctacts</a>
 
 </nav>
     </header>
